unpackaged/main/default/objects/Opportunity/fields/Aboriginal_Partnership__c.field-meta.xml
<CustomField>
    <fullName>Aboriginal_Partnership__c</fullName>
    <label>Aboriginal Partnership</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Alexander</fullName>
            </value>
            <value>
                <fullName>Cygnus</fullName>
            </value>
            <value>
                <fullName>Dene</fullName>
            </value>
            <value>
                <fullName>Nehiyawak</fullName>
            </value>
            <value>
                <fullName>Tulu</fullName>
            </value>
            <value>
                <fullName>Whitecap</fullName>
            </value>
            <value>
                <fullName>KOMO - K'omoks First Nation</fullName>
            </value>
            <value>
                <fullName>SEYE - Seyem Qwantlen Business Group (Kwantlen First Nation)</fullName>
            </value>
            <value>
                <fullName>SAUL - Saulteau First Nations</fullName>
            </value>
            <value>
                <fullName>TSLE - SPAL General Constructors (Tsleil-Waututh Nation)</fullName>
            </value>
            <value>
                <fullName>LHEI - Lheidi T'enneh</fullName>
            </value>
            <value>
                <fullName>LAX	- Lax Kw'alaams Band</fullName>
            </value>
            <value>
                <fullName>TERO Tier 1</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>