unpackaged/main/default/objects/Opportunity/fields/Account_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Text__c</fullName>
    <description>Text of the Account Name</description>
    <formula>Account.Name</formula>
    <inlineHelpText>Text of the Account Name</inlineHelpText>
    <label>Account Name Text</label>
    <type>Text</type>
</CustomField>