unpackaged/main/default/objects/Opportunity/fields/Accounting_Contact__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used in handover.</description>
    <inlineHelpText>Customer contact for accounting issues.</inlineHelpText>
    <label>Billing Contact</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.Contact_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <infoMessage>Looking for active contacts associated with this opportunity's account.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Accounting Contact)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>