unpackaged/main/default/objects/Opportunity/fields/Accounting_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Contact_Email__c</fullName>
    <description>Reads the email from the Accounting Contact</description>
    <formula>Accounting_Contact__r.Email</formula>
    <label>Accounting Contact Email</label>
    <type>Text</type>
</CustomField>