unpackaged/main/default/objects/Opportunity/fields/Accounting_Contact_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Contact_Mobile__c</fullName>
    <description>Lookup of the Mobile phone number for the Account Contact</description>
    <formula>Accounting_Contact__r.MobilePhone</formula>
    <inlineHelpText>Lookup of the Mobile phone number for the Account Contact</inlineHelpText>
    <label>Accounting Contact Mobile</label>
    <type>Text</type>
</CustomField>