unpackaged/main/default/objects/Opportunity/fields/Accounting_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Contact_Name__c</fullName>
    <description>Text of Accounting Contact First &amp; Last Name</description>
    <formula>Accounting_Contact__r.FirstName &amp; " " &amp;  Accounting_Contact__r.LastName</formula>
    <inlineHelpText>Text of Accounting Contact First &amp; Last Name</inlineHelpText>
    <label>Accounting Contact Name</label>
    <type>Text</type>
</CustomField>