unpackaged/main/default/objects/Opportunity/fields/Accounting_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Contact_Phone__c</fullName>
    <description>Lookup of the phone number for the Account Contact</description>
    <formula>Accounting_Contact__r.MobilePhone</formula>
    <label>Accounting Contact Phone</label>
    <type>Text</type>
</CustomField>