unpackaged/main/default/objects/Opportunity/fields/Active_Rental__c.field-meta.xml
<CustomField>
    <fullName>Active_Rental__c</fullName>
    <formula>IF( IsWon ,IF(Quote_Transaction_Type__c == 'Rental',IF( ADDMONTHS( Estimated_First_Revenue__c , Quote_Term_Length__c )&gt; TODAY(),TRUE,FALSE ),FALSE),FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Rental</label>
    <type>Checkbox</type>
</CustomField>