unpackaged/main/default/objects/Opportunity/fields/Actual_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Actual_Contract_Value__c</fullName>
    <label>Contract Value</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>