unpackaged/main/default/objects/Opportunity/fields/AD_Distribution_Group__c.field-meta.xml
<CustomField>
    <fullName>AD_Distribution_Group__c</fullName>
    <description>AD Distribution Group from the Sales Region that comes over from the Lead upon conversrion</description>
    <label>AD Distribution Group</label>
    <type>Email</type>
</CustomField>