unpackaged/main/default/objects/Opportunity/fields/Alcohol_Permitted__c.field-meta.xml
<CustomField>
    <fullName>Alcohol_Permitted__c</fullName>
    <label>Alcohol Permitted</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dry Camp</fullName>
            </value>
            <value>
                <fullName>Moist Camp</fullName>
            </value>
            <value>
                <fullName>Wet Camp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>