unpackaged/main/default/objects/Opportunity/fields/Amortized_Cost_Payment_L__c.field-meta.xml
<CustomField>
    <fullName>Amortized_Cost_Payment_L__c</fullName>
    <label>Amortized Cost Payment (L)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>