unpackaged/main/default/objects/Opportunity/fields/Amortized_Project_Cost_Mark_up_L__c.field-meta.xml
<CustomField>
    <fullName>Amortized_Project_Cost_Mark_up_L__c</fullName>
    <label>Amortized Project Cost Mark-up (L)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>