unpackaged/main/default/objects/Opportunity/fields/Amortized_TD_Mark_up_L__c.field-meta.xml
<CustomField>
    <fullName>Amortized_TD_Mark_up_L__c</fullName>
    <label>Amortized TD Mark-up (L)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>