unpackaged/main/default/objects/Opportunity/fields/Asset_Category__c.field-meta.xml
<CustomField>
    <fullName>Asset_Category__c</fullName>
    <description>This field occurs in the following Record Types:
Equipment Rentals</description>
    <label>Asset Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Surface Rentals</fullName>
                <default>true</default>
                <label>Surface Rentals</label>
            </value>
            <value>
                <fullName>Wellsites</fullName>
            </value>
            <value>
                <fullName>Accommodations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>