unpackaged/main/default/objects/Opportunity/fields/Auto_Renewed__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Renewed</label>
    <type>Checkbox</type>
</CustomField>