unpackaged/main/default/objects/Opportunity/fields/BAFE__c.field-meta.xml
<CustomField>
    <fullName>BAFE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BAFE #</label>
    <referenceTo>BAFE__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>