unpackaged/main/default/objects/Opportunity/fields/Balance__c.field-meta.xml
<CustomField>
    <fullName>Balance__c</fullName>
    <formula>IF( OR(ISPICKVAL(StageName ,"WIP"),ISPICKVAL(StageName ,"Awarded - w/ term &amp; contract"),
       ISPICKVAL(StageName ,"Awarded - w/o term &amp; contract"),ISPICKVAL(StageName ,"Completed."),
       ISPICKVAL(StageName ,"Lost"),ISPICKVAL(StageName ,"Cancelled")),
       0, Estimated_Contract_Value__c)



/* Estimated_Contract_Value__c - of_Wins_new__c - of_Lost_neww__c */</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>