unpackaged/main/default/objects/Opportunity/fields/BD_Campaigns__c.field-meta.xml
<CustomField>
    <fullName>BD_Campaigns__c</fullName>
    <description>Categories being tracked by BD</description>
    <inlineHelpText>Select one of these categories if the Opportunity falls into one. Otherwise select Other.</inlineHelpText>
    <label>BD Campaigns</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COVID-19</fullName>
            </value>
            <value>
                <fullName>Gulf Coast - Energy</fullName>
            </value>
            <value>
                <fullName>Assets Held For Sale - BOXX</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>