unpackaged/main/default/objects/Opportunity/fields/BD_Capital_Notes__c.field-meta.xml
<CustomField>
    <fullName>BD_Capital_Notes__c</fullName>
    <description>Enter a description related to the Black Diamond Capital opportunity.</description>
    <inlineHelpText>Black Diamond Capital opportunity notes</inlineHelpText>
    <label>BD Capital Notes</label>
    <length>250</length>
    <type>Text</type>
</CustomField>