unpackaged/main/default/objects/Opportunity/fields/BD_Capital_Quote_Submitted__c.field-meta.xml
<CustomField>
    <fullName>BD_Capital_Quote_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BD Capital Quote Submitted</label>
    <type>Checkbox</type>
</CustomField>