unpackaged/main/default/objects/Opportunity/fields/BD_Capital_Selected__c.field-meta.xml
<CustomField>
    <fullName>BD_Capital_Selected__c</fullName>
    <description>Select whether or not the Black Diamond Capital leasing option was selected</description>
    <inlineHelpText>Did the client select the Black Diamond Capital leasing option?</inlineHelpText>
    <label>BD Capital Lease Awarded</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>