unpackaged/main/default/objects/Opportunity/fields/Bid_Negotiated__c.field-meta.xml
<CustomField>
    <fullName>Bid_Negotiated__c</fullName>
    <label>Bid/Negotiated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bid</fullName>
            </value>
            <value>
                <fullName>Negotiated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>