unpackaged/main/default/objects/Opportunity/fields/Bid_Set_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Bid_Set_Meeting_Date__c</fullName>
    <description>Enter the date that the Bid Set meeting has been booked</description>
    <inlineHelpText>If a Bidset meeting is required, enter the date that is has been booked. If a subsequent Bid Set meeting is required, enter the new date</inlineHelpText>
    <label>Bid Set Meeting Date</label>
    <type>Date</type>
</CustomField>