unpackaged/main/default/objects/Opportunity/fields/Bid_Submission_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Bid_Submission_Due_Date__c</fullName>
    <description>Date Bid Submission Due and Date Bid Submission Submitted</description>
    <inlineHelpText>Date Bid Submission Due and Date Bid Submission Submitted - update when submitted</inlineHelpText>
    <label>Bid Submission Date</label>
    <type>Date</type>
</CustomField>