unpackaged/main/default/objects/Opportunity/fields/Bid_Submit_Date__c.field-meta.xml
<CustomField>
    <fullName>Bid_Submit_Date__c</fullName>
    <description>Bid Submit Date is the date a formal proposal is submitted to the client.  Bid Submit Date is required to be populated to mark an Opportunity Proposal Delivered</description>
    <inlineHelpText>Bid Submit Date is the date a formal proposal is submitted to the client.  Bid Submit Date is required to be populated to mark an Opportunity Proposal Delivered</inlineHelpText>
    <label>Bid Submit Date</label>
    <type>DateTime</type>
</CustomField>