unpackaged/main/default/objects/Opportunity/fields/Bid_Submitted_Ready_for_Sync_Outreach__c.field-meta.xml
<CustomField>
    <fullName>Bid_Submitted_Ready_for_Sync_Outreach__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bid Submitted - Ready for Sync(Outreach)</label>
    <type>Checkbox</type>
</CustomField>