unpackaged/main/default/objects/Opportunity/fields/Bid_to_Award__c.field-meta.xml
<CustomField>
    <fullName>Bid_to_Award__c</fullName>
    <description>Marks date of WIP</description>
    <label>Bid to Award</label>
    <type>Date</type>
</CustomField>