unpackaged/main/default/objects/Opportunity/fields/Billed_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>Billed_Check_Date__c</fullName>
    <inlineHelpText>Date Billing field was checked. Set via workflow.</inlineHelpText>
    <label>Billed Check Date</label>
    <type>Date</type>
</CustomField>