unpackaged/main/default/objects/Opportunity/fields/Billing_Contact_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Mobile__c</fullName>
    <label>Billing Contact Mobile</label>
    <type>Phone</type>
</CustomField>