unpackaged/main/default/objects/Opportunity/fields/Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Date__c</fullName>
    <description>Estimated date until Opportunity is won, actual date after win. Date of Completed Sale, or Lease Start Date.</description>
    <label>Billing Date</label>
    <type>Date</type>
</CustomField>