unpackaged/main/default/objects/Opportunity/fields/Billing_Postal_Code_Account__c.field-meta.xml
<CustomField>
    <fullName>Billing_Postal_Code_Account__c</fullName>
    <formula>Account.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Postal Code - Account</label>
    <type>Text</type>
</CustomField>