unpackaged/main/default/objects/Opportunity/fields/Billing_Province_State_Account__c.field-meta.xml
<CustomField>
    <fullName>Billing_Province_State_Account__c</fullName>
    <description>Billing State/Province from Account</description>
    <formula>Account.BillingState</formula>
    <inlineHelpText>Billing State/Province from Account for Outreach</inlineHelpText>
    <label>Billing Province/State - Account</label>
    <type>Text</type>
</CustomField>