unpackaged/main/default/objects/Opportunity/fields/Billing_Street_2__c.field-meta.xml
<CustomField>
    <fullName>Billing_Street_2__c</fullName>
    <label>Billing Contact Street 2</label>
    <type>TextArea</type>
</CustomField>