unpackaged/main/default/objects/Opportunity/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <label>Branch</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Division_Region__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>AUS Brisbane</fullName>
            </value>
            <value>
                <fullName>AUS Perth</fullName>
            </value>
            <value>
                <fullName>AUS Sydney</fullName>
            </value>
            <value>
                <fullName>AUS Townsville</fullName>
            </value>
            <value>
                <fullName>BOXX Atlanta</fullName>
            </value>
            <value>
                <fullName>BOXX Austin</fullName>
            </value>
            <value>
                <fullName>BOXX Banks Dallas</fullName>
            </value>
            <value>
                <fullName>BOXX Calgary</fullName>
            </value>
            <value>
                <fullName>BOXX Edmonton</fullName>
            </value>
            <value>
                <fullName>BOXX Fort Worth</fullName>
            </value>
            <value>
                <fullName>BOXX Houston</fullName>
            </value>
            <value>
                <fullName>BOXX Kelowna</fullName>
            </value>
            <value>
                <fullName>BOXX Langley</fullName>
            </value>
            <value>
                <fullName>BOXX Lewisville</fullName>
            </value>
            <value>
                <fullName>BOXX Nanaimo</fullName>
            </value>
            <value>
                <fullName>BOXX Oklahoma</fullName>
            </value>
            <value>
                <fullName>BOXX Ottawa</fullName>
            </value>
            <value>
                <fullName>BOXX Phoenix</fullName>
            </value>
            <value>
                <fullName>BOXX Prince George</fullName>
            </value>
            <value>
                <fullName>BOXX Saskatchewan</fullName>
            </value>
            <value>
                <fullName>BOXX Stoney Creek</fullName>
            </value>
            <value>
                <fullName>BOXX Toronto East</fullName>
            </value>
            <value>
                <fullName>Camps Eastern</fullName>
            </value>
            <value>
                <fullName>Camps Pacific</fullName>
            </value>
            <value>
                <fullName>Camps Prairies</fullName>
            </value>
            <value>
                <fullName>ES Colorado</fullName>
            </value>
            <value>
                <fullName>ES Edson</fullName>
            </value>
            <value>
                <fullName>ES Fort Nelson</fullName>
            </value>
            <value>
                <fullName>ES Fort St. John</fullName>
            </value>
            <value>
                <fullName>ES Grande Prairie</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>