unpackaged/main/default/objects/Opportunity/fields/Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>Branch_Code__c</fullName>
    <label>Branch Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Branch__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>AUBR</fullName>
            </value>
            <value>
                <fullName>AUPE</fullName>
            </value>
            <value>
                <fullName>AUSY</fullName>
            </value>
            <value>
                <fullName>AUTV</fullName>
            </value>
            <value>
                <fullName>BBDA</fullName>
            </value>
            <value>
                <fullName>BXAU</fullName>
            </value>
            <value>
                <fullName>BXBK</fullName>
            </value>
            <value>
                <fullName>BXCA</fullName>
            </value>
            <value>
                <fullName>BXDFW</fullName>
            </value>
            <value>
                <fullName>BXED</fullName>
            </value>
            <value>
                <fullName>BXFJ</fullName>
            </value>
            <value>
                <fullName>BXFN</fullName>
            </value>
            <value>
                <fullName>BXHO</fullName>
            </value>
            <value>
                <fullName>BXHS</fullName>
            </value>
            <value>
                <fullName>BXKE</fullName>
            </value>
            <value>
                <fullName>BXLA</fullName>
            </value>
            <value>
                <fullName>BXLW</fullName>
            </value>
            <value>
                <fullName>BXNN</fullName>
            </value>
            <value>
                <fullName>BXOC</fullName>
            </value>
            <value>
                <fullName>BXOT</fullName>
            </value>
            <value>
                <fullName>BXPG</fullName>
            </value>
            <value>
                <fullName>BXPH</fullName>
            </value>
            <value>
                <fullName>BXSC</fullName>
            </value>
            <value>
                <fullName>BXSK</fullName>
            </value>
            <value>
                <fullName>BXTB</fullName>
            </value>
            <value>
                <fullName>BXTE</fullName>
            </value>
            <value>
                <fullName>BXVA</fullName>
            </value>
            <value>
                <fullName>CP</fullName>
            </value>
            <value>
                <fullName>CPEA</fullName>
            </value>
            <value>
                <fullName>CPFN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>