unpackaged/main/default/objects/Opportunity/fields/Branch_Country__c.field-meta.xml
<CustomField>
    <fullName>Branch_Country__c</fullName>
    <formula>text(Branch_Name__r.Address_Country__c)</formula>
    <label>Branch Country</label>
    <type>Text</type>
</CustomField>