unpackaged/main/default/objects/Opportunity/fields/Branch_Google_Review_URL__c.field-meta.xml
<CustomField>
    <fullName>Branch_Google_Review_URL__c</fullName>
    <description>Google Review URL from opp Branch</description>
    <formula>Branch_Name__r.Google_Review_URL__c</formula>
    <inlineHelpText>Google review URL from opp Branch</inlineHelpText>
    <label>Branch Google Review URL</label>
    <type>Text</type>
</CustomField>