unpackaged/main/default/objects/Opportunity/fields/Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>Branch_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to pull in Branch details for the Opportunity, e.g. Region (used to populate Division/Region), Branch Name Text (used for syncing)</description>
    <inlineHelpText>Select the branch responsible for fulfilling this Opportunity.</inlineHelpText>
    <label>Branch Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Branch__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Branch__c</referenceTo>
    <relationshipLabel>Opportunities Related to this Branch</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>