unpackaged/main/default/objects/Opportunity/fields/Branch_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Branch_Name_Text__c</fullName>
    <description>Pull the Name of the branch into a text field for CPQ</description>
    <formula>TEXT(Branch_Name__r.Branch__c)</formula>
    <label>Branch Name Text</label>
    <type>Text</type>
</CustomField>