unpackaged/main/default/objects/Opportunity/fields/BranchCode__c.field-meta.xml
<CustomField>
    <fullName>BranchCode__c</fullName>
    <description>Pulls the Branch code from the Branch lookup</description>
    <formula>IF( DATEVALUE(CreatedDate) &lt; DATEVALUE("2025-09-04"),Branch_Name__r.Branch_Code__c, Branch_Name__r.New_Branch_Code__c)</formula>
    <label>BranchCode</label>
    <type>Text</type>
</CustomField>