unpackaged/main/default/objects/Opportunity/fields/Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Brand_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand Name</label>
    <referenceTo>Brand__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>