unpackaged/main/default/objects/Opportunity/fields/Building_Mark_up_S__c.field-meta.xml
<CustomField>
    <fullName>Building_Mark_up_S__c</fullName>
    <label>Building Mark-up (S)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>