unpackaged/main/default/objects/Opportunity/fields/Building_Paid__c.field-meta.xml
<CustomField>
    <fullName>Building_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Building Paid?</label>
    <type>Checkbox</type>
</CustomField>