unpackaged/main/default/objects/Opportunity/fields/Building_Payment_L__c.field-meta.xml
<CustomField>
    <fullName>Building_Payment_L__c</fullName>
    <label>Building Payment (L)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>