unpackaged/main/default/objects/Opportunity/fields/Building_Shipping_Date__c.field-meta.xml
<CustomField>
    <fullName>Building_Shipping_Date__c</fullName>
    <inlineHelpText>Est. shipping date of the building to the customer's site.</inlineHelpText>
    <label>Building Shipping Date</label>
    <type>Date</type>
</CustomField>