unpackaged/main/default/objects/Opportunity/fields/Building_Size_sq_ft__c.field-meta.xml
<CustomField>
    <fullName>Building_Size_sq_ft__c</fullName>
    <label>Building Size (sq.ft.)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less than 1,000</fullName>
            </value>
            <value>
                <fullName>1,000 to 4,999</fullName>
            </value>
            <value>
                <fullName>5,000 to 9,999</fullName>
            </value>
            <value>
                <fullName>10,000 to 19,999</fullName>
            </value>
            <value>
                <fullName>More than 20,000</fullName>
            </value>
            <value>
                <fullName>I am unsure</fullName>
            </value>
            <value>
                <fullName>1152</fullName>
                <isActive>false</isActive>
                <label>1152</label>
            </value>
            <value>
                <fullName>1344</fullName>
                <isActive>false</isActive>
                <label>1344</label>
            </value>
            <value>
                <fullName>1395.67</fullName>
                <isActive>false</isActive>
                <label>1395.67</label>
            </value>
            <value>
                <fullName>1440</fullName>
                <isActive>false</isActive>
                <label>1440</label>
            </value>
            <value>
                <fullName>1536</fullName>
                <isActive>false</isActive>
                <label>1536</label>
            </value>
            <value>
                <fullName>1584</fullName>
                <isActive>false</isActive>
                <label>1584</label>
            </value>
            <value>
                <fullName>1624</fullName>
                <isActive>false</isActive>
                <label>1624</label>
            </value>
            <value>
                <fullName>1680</fullName>
                <isActive>false</isActive>
                <label>1680</label>
            </value>
            <value>
                <fullName>190</fullName>
                <isActive>false</isActive>
                <label>190</label>
            </value>
            <value>
                <fullName>1960</fullName>
                <isActive>false</isActive>
                <label>1960</label>
            </value>
            <value>
                <fullName>2016</fullName>
                <isActive>false</isActive>
                <label>2016</label>
            </value>
            <value>
                <fullName>2176</fullName>
                <isActive>false</isActive>
                <label>2176</label>
            </value>
            <value>
                <fullName>2448</fullName>
                <isActive>false</isActive>
                <label>2448</label>
            </value>
            <value>
                <fullName>2664</fullName>
                <isActive>false</isActive>
                <label>2664</label>
            </value>
            <value>
                <fullName>2688</fullName>
                <isActive>false</isActive>
                <label>2688</label>
            </value>
            <value>
                <fullName>2940</fullName>
                <isActive>false</isActive>
                <label>2940</label>
            </value>
            <value>
                <fullName>3072</fullName>
                <isActive>false</isActive>
                <label>3072</label>
            </value>
            <value>
                <fullName>3584</fullName>
                <isActive>false</isActive>
                <label>3584</label>
            </value>
            <value>
                <fullName>3840</fullName>
                <isActive>false</isActive>
                <label>3840</label>
            </value>
            <value>
                <fullName>400-800 square feet</fullName>
                <isActive>false</isActive>
                <label>400-800 square feet</label>
            </value>
            <value>
                <fullName>4008</fullName>
                <isActive>false</isActive>
                <label>4008</label>
            </value>
            <value>
                <fullName>4232</fullName>
                <isActive>false</isActive>
                <label>4232</label>
            </value>
            <value>
                <fullName>432</fullName>
                <isActive>false</isActive>
                <label>432</label>
            </value>
            <value>
                <fullName>4608</fullName>
                <isActive>false</isActive>
                <label>4608</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>