unpackaged/main/default/objects/Opportunity/fields/Building_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Building_Sq_Ft__c</fullName>
    <label>Building Sq Ft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>